# fastapi-hello-world

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  main.py  pyproject.toml
.github/: dependabot.yml  stale.yml
.github/workflows/: codeql.yml  container-security.yml  dast.yml  infracost.yml  sast.yml  sast.yml.old  sast2.yml  sast_old.yml  sast_reuseimage.yml  snyk-container.yml
app/: main.py
envs/: aws.env.sample  docker.env.sample  gcr.env.sample  local.env.sample
iac/: .gitignore
iac/policies/infracost/: cost-policy.rego
iac/terraform/aws/: aws_db_instance.tf  main.tf
terraform/aws/: main.tf
