[tool.poetry]
name = "app"
version = "0.1.0"
description = "Fastapi hello-world app "
authors = ["donhector <2475379+donhector@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/donhector/fastapi-hello-world"
repository = "https://github.com/donhector/fastapi-hello-world"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
isort = "^5.10"
mypy = "^0.991"
autoflake = "^2.0"
pytest = "^7.2"
pytest-watch = "^4.2.0"
pytest-cov = "^4.0"
pytest-asyncio = "^0.20.3"
pytest-xdist = "^3.1.0"
pre-commit = "^2.18"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
py_version = 39
profile = "black"
src_paths = ["app", "tests"]
#force_single_line = true
#force_grid_wrap = 2
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2

[tool.black]
target-version = ['py39']
force-exclude = '''
.*/setup\.py$
'''

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
files = "app"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"
addopts = '''
  --strict-markers
  --tb=short
  --cov=app
  --cov=tests
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --no-cov-on-fail
  --cov-fail-under=100
  --numprocesses=auto
  --asyncio-mode=auto
'''
